Updated changes to the .gitignore file.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 /Chapter5/Project5/Project5/nbproject/private/
 /Chapter5/Project5/Project5/build/
 /Chapter5/Project5/Money/nbproject/private/
+/Chapter5/Project5/Money/build/
