Absolute Java Chapter5 Project 6 Rational Numbers TDD

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 /Chapter5/Project5/Project5/build/
 /Chapter5/Project5/Money/nbproject/private/
 /Chapter5/Project5/Money/build/
+/Chapter5/Project6/RationalNumbers/nbproject/private/
+/Chapter5/Project6/RationalNumbers/build/
