Absolute Java Chapter 5 Project 7
Complex Numbers TDD. Both Part two and Alternate Part Two

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@
 /Chapter5/Project5/Money/build/
 /Chapter5/Project6/RationalNumbers/nbproject/private/
 /Chapter5/Project6/RationalNumbers/build/
+/Chapter5/Project7/ComplexNumbers/nbproject/private/
+/Chapter5/Project7/ComplexNumbers/build/
+/Chapter5/Project7/ComplexNumbers/dist/
