AbsoluteJava Chapter6 Project1 Divers Score TDD

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@
 /Chapter5/Project7/ComplexNumbers/nbproject/private/
 /Chapter5/Project7/ComplexNumbers/build/
 /Chapter5/Project7/ComplexNumbers/dist/
+/Chapter6/Project1/DiversScore/nbproject/private/
+/Chapter6/Project1/DiversScore/build/
