AbsoluteJava Chapter6 Project1 DiversScore TDD
Updated tests and certain methods signatures

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@
 /Chapter5/Project7/ComplexNumbers/dist/
 /Chapter6/Project1/DiversScore/nbproject/private/
 /Chapter6/Project1/DiversScore/build/
+/Chapter6/Project1/DiversScore/dist/
