Absolute Java Chapter7 Project 1 Payment Details

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,8 @@
 /Chapter6/Project1/DiversScore/nbproject/private/
 /Chapter6/Project1/DiversScore/build/
 /Chapter6/Project1/DiversScore/dist/
+/Chapter6/Project2/MemoryMatchingGame/nbproject/private/
+/Chapter6/Project2/MemoryMatchingGame/build/
+/Chapter7/Project1/Payment Details/nbproject/private/
+/Chapter7/Project1/Payment Details/build/
+/Chapter7/Project1/Payment Details/dist/
