Absolute Java Chapter7 Project2 Document TDD

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,5 @@
 /Chapter7/Project1/Payment Details/nbproject/private/
 /Chapter7/Project1/Payment Details/build/
 /Chapter7/Project1/Payment Details/dist/
+/Chapter7/Project2/Document/nbproject/private/
+/Chapter7/Project2/Document/build/
