Absolute Java Chapter7 Project 3 Video Game TDD

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,6 @@
 /Chapter7/Project1/Payment Details/dist/
 /Chapter7/Project2/Document/nbproject/private/
 /Chapter7/Project2/Document/build/
+/Chapter7/Project3/Video Game/nbproject/private/
+/Chapter7/Project3/Video Game/build/
+/Chapter7/Project3/Video Game/dist/
