Absolute Java Chapter7 Multiple Projects TDD
Project4, Project5 and Project6

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,10 @@
 /Chapter7/Project3/Video Game/nbproject/private/
 /Chapter7/Project3/Video Game/build/
 /Chapter7/Project3/Video Game/dist/
+/Chapter7/Project4/Inheritance Demo/nbproject/private/
+/Chapter7/Project4/Inheritance Demo/build/
+/Chapter7/Project4/Inheritance Demo/dist/
+/Chapter7/Project5/Inheritance Demo/nbproject/private/
+/Chapter7/Project5/Inheritance Demo/build/
+/Chapter7/Project6/Vehical Owner Inheritance Demo/nbproject/private/
+/Chapter7/Project6/Vehical Owner Inheritance Demo/build/
