Absolute Java Chapter7 Project7 TDD
Clinic Medical records containing Patient and Billing Classes

--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,7 @@
 /Chapter7/Project5/Inheritance Demo/build/
 /Chapter7/Project6/Vehical Owner Inheritance Demo/nbproject/private/
 /Chapter7/Project6/Vehical Owner Inheritance Demo/build/
+/Chapter7/Project7/Patient and Billing Inheritance/nbproject/private/
+/Chapter7/Project7/Patient and Billing Inheritance/build/
+/Chapter7/Project7/Clinic Record/nbproject/private/
+/Chapter7/Project7/Clinic Record/build/
