Absolute Java Chapter8 Project2 And Project3 TDD
Movie and Rental With Abstract Class And Abstract Methods

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,5 @@
 /Chapter7/Project7/Clinic Record/build/
 /Chapter8/Video Game/nbproject/private/
 /Chapter8/Video Game/build/
+/Chapter8/Movie Rental/nbproject/private/
+/Chapter8/Movie Rental/build/
