Absolute Java Chapter8 Project1, Project2 And Project3 TDD
Alien Video Game Abstract Classes And Abstract Methods.
Movie And Rental With Abstract Classes And Abstract Methods

--- a/.gitignore
+++ b/.gitignore
@@ -33,5 +33,5 @@
 /Chapter7/Project7/Clinic Record/build/
 /Chapter8/Video Game/nbproject/private/
 /Chapter8/Video Game/build/
-/Chapter8/Movie Rental/nbproject/private/
-/Chapter8/Movie Rental/build/
+/Chapter8/Project2AndProject3/Movie Rental/build/
+/Chapter8/Project2AndProject3/Movie Rental/nbproject/private/
