Absolute Java Chapter10 Project5
Read a file with extra spaces. Remove extra white spaces from a file,
and create a new file without extra spaces.

--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,5 @@
 /Chapter10/Project3/AvergaeOfDoubleNumbers/build/
 /Chapter10/Project4/Standard Deviation Of Numbers/nbproject/private/
 /Chapter10/Project4/Standard Deviation Of Numbers/build/
+/Chapter10/Project5/Remove Extra Blanks From File/nbproject/private/
+/Chapter10/Project5/Remove Extra Blanks From File/build/
