Absolute Java Chapter10 Project8
Calculates  the average of 10 double numbers read from a binary file
containing doubles.

--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,11 @@
 /Chapter10/Project4/Standard Deviation Of Numbers/build/
 /Chapter10/Project5/Remove Extra Blanks From File/nbproject/private/
 /Chapter10/Project5/Remove Extra Blanks From File/build/
+/Chapter10/Write Binary Integers/nbproject/private/
+/Chapter10/Write Binary Integers/build/
+/Chapter10/Project7/Largest And Smallest Integer Value/nbproject/private/
+/Chapter10/Project7/Largest And Smallest Integer Value/build/
+/Chapter10/Write Binary Doubles/nbproject/private/
+/Chapter10/Write Binary Doubles/build/
+/Chapter10/Project8/Average Of Binary Doubles/nbproject/private/
+/Chapter10/Project8/Average Of Binary Doubles/build/
