--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,5 @@
 /Chapter10/Write Binary Doubles/build/
 /Chapter10/Project8/Average Of Binary Doubles/nbproject/private/
 /Chapter10/Project8/Average Of Binary Doubles/build/
+/Chapter10/Project9/Standard Deviation Of Binary Double Numbers/nbproject/private/
+/Chapter10/Project9/Standard Deviation Of Binary Double Numbers/build/
