Absolute Java Chapter13 Project 1 to Project 5
Implemented different exercises for Chapter13 Interfaces and Inner
Classes.
Implemented Projects 1, 2, 3, 4 and 5.

--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,13 @@
 /Chapter10/Project8/Average Of Binary Doubles/build/
 /Chapter10/Project9/Standard Deviation Of Binary Double Numbers/nbproject/private/
 /Chapter10/Project9/Standard Deviation Of Binary Double Numbers/build/
+/Chapter13/Project2/Inventory Item With Comparable Interface/nbproject/private/
+/Chapter13/Project2/Inventory Item With Comparable Interface/build/
+/Chapter13/Project3/Interface and Inner Class/nbproject/private/
+/Chapter13/Project3/Interface and Inner Class/build/
+/Chapter13/Project1/Binary Search With Comparable/nbproject/private/
+/Chapter13/Project1/Binary Search With Comparable/build/
+/Chapter13/Project4/Merge Sort With Comparable/nbproject/private/
+/Chapter13/Project4/Merge Sort With Comparable/build/
+/Chapter13/Project5/Quick Sort With Comparable/nbproject/private/
+/Chapter13/Project5/Quick Sort With Comparable/build/
