Absolute Java Chapter14 Project2 TDD
Used Guava libraries to write the compareTo method.
Also added the main class to run the project.

--- a/.gitignore
+++ b/.gitignore
@@ -79,3 +79,6 @@
 /Chapter13/Project9/Employee and Date As Inner Private Class/build/
 /Chapter14/Project1/Diving Score with Array List/nbproject/private/
 /Chapter14/Project1/Diving Score with Array List/build/
+/Chapter14/Project2/Contacts Information/nbproject/private/
+/Chapter14/Project2/Contacts Information/build/
+/Chapter14/Project2/Contacts Information/dist/
