Absolute Java Chapter14 Project 4 TDD
Implemented a generic class type which extends Number.
Can calculate Standard Deviation of different subtypes of Number e.g
Double, Long, Integer

--- a/.gitignore
+++ b/.gitignore
@@ -82,3 +82,8 @@
 /Chapter14/Project2/Contacts Information/nbproject/private/
 /Chapter14/Project2/Contacts Information/build/
 /Chapter14/Project2/Contacts Information/dist/
+/Chapter14/Project3/Global Positioning Satellite Waypoints/nbproject/private/
+/Chapter14/Project3/Global Positioning Satellite Waypoints/build/
+/Chapter14/Project4/Generic Based Math Class To Calculate Standard Deviation/nbproject/private/
+/Chapter14/Project4/Generic Based Math Class To Calculate Standard Deviation/build/
+/Chapter14/Project4/Generic Based Math Class To Calculate Standard Deviation/dist/
