Absolute Java Chapter14 Project 5
Implemented a Generic class with a type parameter.
Simulates a random draw of an item from this class.
Implemented a generic add method to add an item to an underlying
container of List<T> type.
Implemented an isEmpty method to see if the container is empty.
Implemented a draw method to randomly draw an item from the container.
Implemented a method to remove all items from the container.

--- a/.gitignore
+++ b/.gitignore
@@ -87,3 +87,6 @@
 /Chapter14/Project4/Generic Based Math Class To Calculate Standard Deviation/nbproject/private/
 /Chapter14/Project4/Generic Based Math Class To Calculate Standard Deviation/build/
 /Chapter14/Project4/Generic Based Math Class To Calculate Standard Deviation/dist/
+/Chapter14/Project5/Generic Class Simulating Drawing An Item/nbproject/private/
+/Chapter14/Project5/Generic Class To Simulate Random Draw An Item/nbproject/private/
+/Chapter14/Project5/Generic Class To Simulate Random Draw An Item/build/
